线上过滤规则整合完毕

--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,14 @@
 </dependency>
 <!-- libSVM  相关jar包-->
 <dependency>
-    <groupId>tw.edu.ntu.csie</groupId>
-    <artifactId>libsvm</artifactId>
-    <version>3.17</version>
+	<groupId>nz.ac.waikato.cms.weka</groupId>
+	<artifactId>LibSVM</artifactId>
+	<version>1.0.6</version>
+</dependency>
+	<dependency>
+		<groupId>nz.ac.waikato.cms.weka</groupId>
+		<artifactId>weka-dev</artifactId>
+		<version>3.7.11</version>
 </dependency>
   <!-- log4j -->
   <dependency>
