--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>ansj_seg</artifactId>
             <version>5.0.1</version>
   </dependency>
+  <!-- 添加 codis 缓存 -->
+  		<dependency>
+			<groupId>com.sohu.mrd.framework</groupId>
+			<artifactId>redis-client</artifactId>
+			<version>1.2.0-SNAPSHOT</version>
+		</dependency>
 <!-- fastjson -->
 <dependency>
     <groupId>com.alibaba</groupId>
